# mycoll

./: .gitignore  Pipfile  README.md  db.sqlite3  docker-compose.yml  manage.py  mysite.template  pyproject.toml  requirements.txt
accounts/: serializers.py  urls.py  views.py
accounts/templates/accounts/: signup.html
accounts/templates/registration/: login.html
api/: urls.py
book_app/: admin.py  models.py  tests.py  urls.py  views.py
book_app/migrations/: 0001_initial.py  0002_bookcopy.py
book_app/templates/book_app/: book_copy_create.html  book_copy_detail.html  book_create.html  book_delete.html  book_detail.html  book_list.html
certs/: mycoll.crt  mycoll.key
certs/104.248.238.221/: cert.pem  key.pem
movie_app/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
movie_app/migrations/: 0001_initial.py  0002_auto_20200117_0010.py  0002_auto_20200131_1930.py  0002_moviecopy_vod_link.py  0003_auto_20200117_0026.py  0003_movie_tmdb_page_link.py  0004_auto_20200222_2321.py  0004_movie_owner.py  0005_movie_overview.py  0005_moviecopy.py  0006_moviecopy_owner.py
movie_app/templates/movie_app/: movie_create.html  movie_delete.html  (+3 more)
movie_app/tests/: test_models.py  test_views.py
mycoll_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  home.html
templates/registration/: login.html
tv_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tv_app/migrations/: 0001_initial.py  0002_auto_20200803_1737.py  0003_seasoncopy_owner.py
tv_app/tests/: test_models.py  test_views.py
