[tool.poetry]
name = "mycoll_back_end"
version = "0.1.0"
description = ""
authors = ["Skyler Burger <skylerburger@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
django = "^3.0.8"
djangorestframework = "^3.11.2"
djangorestframework-simplejwt = "^4.4.0"
gunicorn = "^20.0.4"
django-cors-headers = "^3.4.0"
requests = "^2.24.0"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.5"
whitenoise = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
